# raw-player-rs

./: .pre-commit-config.yaml  AGENTS.md  CHANGES.md  Cargo.toml  Makefile  README.md  build.rs  canary.py  prek.toml
.github/workflows/: ci.yml  release.yml
examples/: player.rs
issues/: 0001-bug-audio-stop-not-resetting-has-played.md  0002-bug-audio-clock-rewind-on-format-change.md  0003-bug-unsafe-send-for-sdl-objects.md  0004-bug-pause-silently-discards-input.md  0005-bug-sdl-init-concurrent-first-call.md  0006-bug-pixel-buffer-plane-unsafe-slice.md  0007-bug-audio-chunk-lost-on-put-data-failure.md
issues/closed/: 0001-bug-audio-stop-not-resetting-has-played.md  0002-bug-audio-clock-rewind-on-format-change.md  0003-bug-unsafe-send-for-sdl-objects.md  0004-bug-pause-silently-discards-input.md  0005-bug-sdl-init-concurrent-first-call.md  0006-bug-pixel-buffer-plane-unsafe-slice.md  0007-bug-audio-chunk-lost-on-put-data-failure.md  0010-bug-quit-unsafe-with-live-resources.md  0011-bug-key-callback-called-under-mutex-lock.md  0012-bug-pitch-calculation-i32-overflow.md  0013-bug-pixel-buffer-stride-i32-truncation.md  0014-bug-player-sample-expect-panic.md  0015-bug-pixel-buffer-dimensions-not-validated.md
issues/pending/: 0003-bug-unsafe-send-for-sdl-objects.md
pbt/: Cargo.toml
pbt/tests/: prop_audio_player.rs  prop_video_frame.rs
skills/raw-player/: SKILL.md
src/: audio_format.rs  audio_player.rs  audio_stream.rs  error.rs  event.rs  ffi.rs  lib.rs  pixel_buffer.rs  renderer.rs  texture.rs  video_format.rs  video_frame.rs  video_player.rs  window.rs
tests/: test_error.rs
