
[package]
name = "raw_player"
version = "2026.1.0-canary.0"
edition = "2024"
rust-version = "1.88"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "Raw audio/video player for Rust"
homepage = "https://github.com/shiguredo/raw-player-rs"
repository = "https://github.com/shiguredo/raw-player-rs"
readme = "README.md"

[dependencies]

[dev-dependencies]
shiguredo_audio_device = { version = "=2026.1.0-canary.0", default-features = false }
shiguredo_video_device = { version = "=2026.1.0-canary.3", default-features = false }

[build-dependencies]
bindgen = "0.72"
shiguredo_cmake = "4.3.0"
shiguredo_toml = "2026.1.0"

[workspace]
members = ["pbt"]

# 以降は外部ライブラリビルド用のメタデータ
# (この内容は build.rs の中からのみ参照される)
[package.metadata.external-dependencies]
sdl3 = { git = "https://github.com/libsdl-org/SDL.git", tag = "release-3.4.2" }
