[package]
name = "raw_player"
version = "2026.1.0"
edition = "2024"
rust-version = "1.88"
description = "Raw audio/video player for Rust"
readme = "README.md"
homepage = "https://github.com/shiguredo/raw-player-rs"
repository = "https://github.com/shiguredo/raw-player-rs"
license = "Apache-2.0"
build = "build.rs"
include = ["/LICENSE", "/README.md", "/build.rs", "/src/**"]

# 以降は外部ライブラリビルド用のメタデータ
# (この内容は build.rs の中からのみ参照される)
[package.metadata.external-dependencies.sdl3]
url = "https://github.com/libsdl-org/SDL"
tag = "release-3.4.8"

[workspace]
members = ["pbt"]

[dependencies]

[dev-dependencies]
shiguredo_audio_device = { version = "2026.1", default-features = false }
shiguredo_video_device = { version = "2026.1", default-features = false }

[build-dependencies]
bindgen = "0.72"
shiguredo_cmake = "4.3"
shiguredo_toml = "2026.1"

[features]
source-build = []
